--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "chai": "^2.2.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "jade": "~1.9.2",
+    "mocha": "^2.2.1",
     "morgan": "~1.5.1",
     "requestify": "^0.1.17",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "sinon": "^1.14.1",
+    "supertest": "^0.15.0"
   }
 }
