--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -13,6 +14,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "mocha": "^2.2.1",
+    "mocha-clean": "^0.4.0",
     "morgan": "~1.5.1",
     "requestify": "^0.1.17",
     "serve-favicon": "~2.2.0",
